[project]
name = "qwen-api"
version = "0.1.0"
description = "Qwen3 ForcedAligner REST API 服务"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "qwen_asr>=0.0.6",
    "transformers>=4.46.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
